@@ -171,3 +171,7 @@ end
 Then(/^I should know the paragraph class is "([^"]*)"$/) do |class_name|
   expect(@page.p_id_element.class_name).to eql class_name
 end
+
+Then(/^I should be able to select "([^"]*)" from the paragraph$/) do |text|
+  @page.p_id_element.select_text text
+end
