@@ -3,6 +3,7 @@
   * Added elements method to accessor so one can generate methods for generic collections of elements
   * Added class_name method to Element
   * Added wait_for_expected_title and expected_element_visible methods
+  * Added select_text method to Element
 === Version 1.1.8/2017-01-18
 * Enhancements
   * Added ability to find elements using any valid attribute
